--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
-      <a href="#about" class="get-started-btn scrollto">Get Started</a>
+      <a href="#about" class="get-started-btn scrollto">छठ की अनुभूतिया</a>
     </div>
   </header><!-- End Header -->
 
