--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
           <!-- You can delete the links only if you purchased the pro version. -->
           <!-- Licensing information: https://bootstrapmade.com/license/ -->
           <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/presento-bootstrap-corporate-template/ -->
-          Designed by <a href="https://bootstrapmade.com/">NSTI Patna</a>
+          Designed by <a href="https://nstiwpatna.dgt.gov.in/">NSTI Patna</a>
         </div>
       </div>
       <div class="social-links text-center text-md-end pt-3 pt-md-0">
